Add docuemntation on native-free OSHI and JEP 472